# low-hz-sfm

./: .gitignore  DESIGN.md  EVIDENCE.md  IMPLEMENTATION_PROOF.md  LAMAR_QUICK_START.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  VALIDATION_SUMMARY.md  WORKFLOW.md  code_review_report_multivisit.md  main.py  pyproject.toml  test_multivisit_review.py  test_multivisit_review_standalone.py  test_security_issues.py
configs/: colmap.yaml  hilti.yaml  lamar.yaml
docs/: CACHING.md  FULL_INTEGRATION_SUMMARY.md  GLOMAP_INTEGRATION.md  LAMAR_IMPLEMENTATION_SUMMARY.md  LAMAR_PIPELINE_INTEGRATION.md  lamar_integration.md
scripts/: analyze_matches.py  download_hilti_dataset.py  download_hilti_dataset.sh  download_hilti_ground_truth.py  download_lamar_dataset.py  hilti_ground_truth_manifest.json
src/sfm_experiments/: __init__.py  camera_calibration.py  camera_viz.py  cli.py  colmap_diagnostics.py  colmap_runner.py  colmap_runner_tuned.py  config.py  dataset.py  debug_report_generator.py  diagnostics.py  feature_viz.py  glomap_wrapper.py  html_report_generator.py  lamar_experiment.py  lamar_handler.py  lamar_visualization.py  matching_viz.py  metrics.py  multivisit.py  pipeline_visualizer.py  point_cloud_viz.py  reconstruction_viz.py  utils.py  visualization.py
src/sfm_experiments/templates/: comprehensive_report.html.jinja2  debug_report.html.j2
tests/: test_glomap_integration.py  test_metrics.py
